--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         position: fixed;
         padding: 10px 20px;
         text-align: center;
+        width: 130px;
       }
 
       #save-button-container {
@@ -1709,9 +1710,6 @@
               return v['Primary SDG'] == SDG_Filter
             })
 
-            console.log('data', data)
-
-
             data.forEach(function(v) {
               if (v['Circular Value Chain'] == 'Design') {
                 v['Circular Value Chain'] = 'Product Development'
@@ -3190,7 +3188,6 @@
                 if (state.level == 0) {
                   return colorScale(d.data.value.key)
                 } else {
-                  console.log()
                   return colorScale(SDG_Filter)
                 }
               })
@@ -5322,12 +5319,16 @@
                   segmentDesc = v.Description;
                 }
               });
-            var count_by_focus_area = d3
+            var count = d3
               .nest()
               .key(function(d) {
-                return d["Primary SDG"];
+                if (state.level == 0) {
+                  return d["Primary SDG"];
+                } else {
+                  return d[Field]
+                }
               })
-              .sortKeys(function(a, b) {
+              /*.sortKeys(function(a, b) {
                 let aVal = 0
                 let bVal = 0
                 focusAreaSort.forEach(function(v, index) {
@@ -5339,12 +5340,12 @@
                   }
                 })
                 return d3.ascending(aVal, bVal)
-              })
+              })*/
               .entries(data.filter(function(v) {
-                if (filters.type === "All Startups") {
+                if (filters.industry == "All Startups") {
                   return v
                 } else {
-                  return v["Client Served"] === filters.type
+                  return v["Industry"] == filters.industry
                 }
               }).filter(function(v) {
                 if (filters.geotype === "All Startups") {
@@ -5352,20 +5353,33 @@
                 } else {
                   return v["Global"] === filters.geotype
                 }
-              }));
+              }).filter(function(v) {
+                if (state.level == 0) {
+                  return v
+                } else {
+                  return v['Primary SDG'] == state.key
+                }
+              }).filter(function(v) {
+                if (filters.innovation == "All Startups") {
+                  return v
+                } else {
+                  return v["Type of Innovation"] == filters.innovation
+                }
+              })
+              )
 
               var numberOfStartups = 0;
               var segmentFunding = 0;
-              for (i = 0; i < count_by_focus_area.length; i++) {
+              for (i = 0; i < count.length; i++) {
                 if (
-                  count_by_focus_area[i].key === segment_data.data.value.key
+                  count[i].key === segment_data.data.value.key
                 ) {
-                  numberOfStartups = count_by_focus_area[i].values.length;
-                  theme = count_by_focus_area[i].values[0]["Theme"];
+                  numberOfStartups = count[i].values.length;
+                  theme = count[i].values[0]["Theme"];
                   themeDesc =
-                    count_by_focus_area[i].values[0]["Theme Definition"];
+                    count[i].values[0]["Theme Definition"];
                   segmentFunding = d3.sum(
-                    count_by_focus_area[i].values,
+                    count[i].values,
                     function(d) {
                       return d["Funding amount ($)"];
                     }
@@ -5383,7 +5397,6 @@
                 if (state.level == 0) {
                   return colorScale(segment_data.data.value.key)
                 } else {
-                  console.log()
                   return colorScale(SDG_Filter)
                 }
               } )
@@ -5787,43 +5800,7 @@
                   .attr("d", d.newArc)
                   .style("fill", "none");
               })
-  
-                  var tmpLabels = tmp_chartSVG
-                    .append("g")
-                    .classed("labels", true);
-                  var tmpLabelsOther = tmp_chartSVG
-                    .append("g")
-                    .classed("labels", true);
-  
-                  tmpLabels
-                    .append("def")
-                    .append("path")
-                    .attr("id", "label-path")
-                    .attr(
-                      "d",
-                      "m0 " +
-                        -labelRadius +
-                        " a" +
-                        labelRadius +
-                        " " +
-                        labelRadius +
-                        " 0 1,1 -0.01 0"
-                    );
-  
-                  tmpLabelsOther
-                    .append("def")
-                    .append("path")
-                    .attr("id", "label-other-path")
-                    .attr(
-                      "d",
-                      "m0 " +
-                        -labelOtherRadius +
-                        " a" +
-                        labelOtherRadius +
-                        " " +
-                        labelOtherRadius +
-                        " 0 1,1 -0.01 0"
-                    );
+
   
                   /*tmpLabels
                     .selectAll("text")
