--- a/index.html
+++ b/index.html
@@ -1687,7 +1687,7 @@
         var chartTitle = chartSVG
           .append("text")
           .attr("class", "chart-title")
-          .text("SDG Compass")
+          .text("SDG 12 Compass")
           .attr("y", (-height * 4.55) / 10)
           .style("display", "none")
   
